# Local-Voice-Agent

./: .gitignore  AGENT_REFERENCE.md  README.md  ROADMAP.md  agent.py  pyproject.toml
data/customers/: david_chen.md  james_wilson.md  sarah_lee.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/token/: route.ts
frontend/src/components/: VoiceAssistantUI.tsx
src/local_livekit_plugins/: piper_tts.py
