[project]
name = "clean-agent"
version = "0.1.0"
description = "Clean Local Architecture Voice Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents[silero,turn-detector]~=1.2",
    "livekit-plugins-openai~=1.0",
    "faster-whisper>=1.0.0",
    "piper-tts>=1.2.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "torch>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_livekit_plugins"]

[tool.uv]
default-groups = []
